spacing fixes

--- a/src/components/BottomSection.css
+++ b/src/components/BottomSection.css
@@ -1,6 +1,10 @@
 .home__bottom-section {
   color: #1b1d33;
-  padding: 30px 0 50px 0;
+  padding: 150px 0;
+}
+
+.home__bottom-section.darkerBg {
+  padding: 50px 0 150px 0;
 }
 
 .bottom-container {
@@ -16,6 +20,15 @@
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+}
+
+#talents {
+  padding: 48px;
+  width: 906px;
+  margin: 0 auto;
+  background: #ffffff;
+  box-shadow: 0px 4px 30px rgba(20, 112, 108, 0.05);
+  border-radius: 24px;
 }
 
 .bottom-col h2 {
@@ -40,14 +53,20 @@
   font-size: 24px;
   line-height: 32px;
   color: #1b9690;
+  margin-top: 30px;
 }
 
 .bottom-col p {
   width: 758px;
   font-style: normal;
-  font-weight: 700;
   font-size: 18px;
   line-height: 32px;
   text-align: center;
   margin-top: 30px;
+}
+
+#para {
+  margin-top: -30px;
+  width: 470px;
+  height: 64px;
 }
