--- a/src/components/GridText.css
+++ b/src/components/GridText.css
@@ -13,7 +13,6 @@
 
 .bottom {
   margin-top: -80px;
-  width: 856px;
 }
 
 .grid-text h3 {
